Update README and refactor QueryService and QueryController to return number of rows